Package: aroma.tcga
===================

Version: 0.4.2 [2010-01-17]
o ...

Version: 0.4.1 [2010-01-08]
o Added extractTumorNormalPairs() for GenericDataFileSet.


Version: 0.4.0 [2010-01-07]
o Added static readBCRSamplesTable() of TcgaDccDownloader for
  downloading the BCR sample HTML table, converting it to a
  tab-delimited text file, and returning it as a data frame. 


Version: 0.3.3 [2010-01-07]
o SCRIPTS: Added script to import ASCRMAv2 chip-effect sets.
o SCRIPTS: The testScripts/system/ now have more informative names, 
  and are more convenient in interactive mode.
o Added argument 'samplePatterns' to exportTotalAndFracB() for
  HudsonAlphaXYTcgaDataFile, which can be used to export a subset of
  the data for particular TCGA samples.
o BUG FIX: Forgot to assign default NAs to allocated files.  Updated
  aroma.core v1.4.1 to assign NAs by default.


Version: 0.3.2 [2010-01-06]
o Added extractByTcgaType() for GenericDataFileSet.  It asserts
  that the names of the files in the data set are valid TCGA names.
o Added default maxNbrOfUnknownUnitNames=0 to all exportNnn() function.


Version: 0.3.1 [2010-01-05]
o Added BroadAfter5NNTotalCopyNumberTcgaDataFile to match
  *.after_5NN.copynumber.data.txt files.  The former one
  BroadTotalCopyNumberTcgaDataFile now matches only
  *.copynumber.data.txt files (not including the above).
o WORKAROUND: Added getColumnNames() for MskccTotalCopyNumberTcgaDataFile 
  that detects empty column names and replaces them with a default name.
o WORKAROUND: Some of the TCGA data files are not MAGE-TAB files,
  but rather regular tab-delimited files.  Updated getHeader() of 
  MageTabDataMatrixFile to detect this.


Version: 0.3.0 [2010-01-04]
o Added MskccTotalCopyNumberTcgaData(File|FileSet).
o Added HarvardTotalCopyNumberTcgaData(File|FileSet).
o Added getDefaultFullName(... parent=1) to TcgaDataFileSet so that 
  it handles the updated ditto in R.filesets (now with parent=0).