@@ -5,6 +5,11 @@
 #  library("aroma.tcga"); library("R.menu");
 #  launchMenu(aroma.tcga, "testScripts/system/normalize/");
 #
+# Command line:
+#  nohupR 1.PrincipalCurveNormalization.Rex
+#    --types=<types> --centers=<centers> --methods=<methods> 
+#    [--dataSets="<dataSet1>,...,<dataSetK>"]
+#
 # Description:
 # Normalized (tumor,normal) CN ratios using principal-curve normalization.
 #  1. ...
@@ -25,6 +30,36 @@ tcgaFNT01 <- function(names, ...) {
                      patterns$patient, patterns$sampleId);
   gsub(pattern, "\\1,\\5,\\8", names);
 }
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Command line options
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+if (!interactive()) {
+  args <- commandArgs(asValues=TRUE, excludeReserved=TRUE, excludeEnvVars=TRUE)[-1];
+  verbose && cat(verbose, "Raw command line arguments:");
+  verbose && print(verbose, args);
+
+  # Optional arguments
+  if (!is.null(args$types)) {
+    args$types <- trim(strsplit(args$types, split=", ")[[1]]);
+  }
+  if (!is.null(args$centers)) {
+    args$centers <- trim(strsplit(args$centers, split=", ")[[1]]);
+  }
+  if (!is.null(args$methods)) {
+    args$methods <- trim(strsplit(args$methods, split=", ")[[1]]);
+  }
+  if (!is.null(args$dataSets)) {
+    args$dataSets <- trim(strsplit(args$dataSets, split=", ")[[1]]);
+  }
+  if (!is.null(args$sampleNames)) {
+    args$sampleNames <- trim(strsplit(args$sampleNames, split=", ")[[1]]);
+  }
+  verbose && cat(verbose, "Parsed command line arguments:");
+  verbose && print(verbose, args);
+}
+
 
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -60,12 +95,62 @@ uTypes <- sort(unique(types));
 if (interactive()) {
   uTypes <- selectMenu(uTypes, selected=(length(uTypes) == 1),
                        title="Select type:");
+} else {
+  if (!is.null(args$types)) {
+    uTypes <- intersect(uTypes, args$types);
+  }
+}
+
+keep <- is.element(types, uTypes);
+dataSets <- dataSets[keep];
+verbose && print(verbose, dataSets);
+stopifnot(length(dataSets) > 0);
+
+
+# Human-style sorting
+## try(dataSets <- gtools::mixedsort(dataSets), silent=TRUE);
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Select by center
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+centers <- gsub(pattern, "\\1", dataSets);
+uCenters <- sort(unique(centers));
+if (interactive()) {
+  uCenters <- selectMenu(uCenters);
+} else {
+  if (!is.null(args$centers)) {
+    uCenters <- intersect(uCenters, args$centers);
+  }
+}
+verbose && cat(verbose, "TCGA center:");
+verbose && print(verbose, uCenters);
+dataSets <- dataSets[is.element(centers, uCenters)];
+
+verbose && cat(verbose, "Filtered data sets:");
+verbose && print(verbose, dataSets);
+stopifnot(length(dataSets) > 0);
+
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Select preprocessing types
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+pattern <- sprintf("^%s,", patterns$dataset);
+types <- gsub(pattern, "", dataSets);
+uTypes <- sort(unique(types));
+
+# User selected types
+if (interactive()) {
+  uTypes <- selectMenu(uTypes, selected=(length(uTypes) == 1), title="Select preprocessing methods:");
+} else {
+  if (!is.null(args$methods)) {
+    uTypes <- intersect(uTypes, args$methods);
+  }
 }
 
 keep <- is.element(types, uTypes);
 dataSets <- dataSets[keep];
 stopifnot(length(dataSets) > 0);
-
 
 # Human-style sorting
 ## try(dataSets <- gtools::mixedsort(dataSets), silent=TRUE);
@@ -75,161 +160,137 @@ stopifnot(length(dataSets) > 0);
 # Select data sets
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 if (interactive()) {
-  dataSet <- textMenu(dataSets, value=TRUE); 
-} else {
-  dataSet <- "broad.mit.edu_OV.Genome_Wide_SNP_6.9.5.0,ov,ismpolish";
-  dataSet <- "broad.mit.edu_OV.Genome_Wide_SNP_6.11.5.0,ov,ismpolish";
-  dataSet <- "broad.mit.edu_OV.Genome_Wide_SNP_6.12.6.0,ov,ismpolish";
-  dataSet <- "broad.mit.edu_OV.Genome_Wide_SNP_6.13.6.0,ov,ismpolish";
-  dataSet <- "broad.mit.edu_OV.Genome_Wide_SNP_6.14.7.0,ov,ismpolish";
-  dataSet <- "hudsonalpha.org_OV.Human1MDuo.1.1.0,ov";
-  dataSet <- "hudsonalpha.org_OV.Human1MDuo.2.1.0,ov";
-  dataSet <- "hudsonalpha.org_OV.Human1MDuo.3.0.0,ov";
-  dataSet <- "hudsonalpha.org_OV.Human1MDuo.4.0.0,ov";
-  dataSet <- "hudsonalpha.org_OV.Human1MDuo.5.0.0,ov";
-  dataSet <- "hudsonalpha.org_OV.Human1MDuo.6.0.0,ov";
+  dataSets <- selectMenu(dataSets, selected=(length(dataSets) == 1), title="Select dataset(s):");
 }
+stopifnot(length(dataSets) > 0);
 
-verbose && cat(verbose, "Selected data set:");
-verbose && print(verbose, dataSet);
 
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Setup total locus data set
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-tags <- NULL;
-dsR <- AromaUnitTotalCnBinarySet$byName(dataSet, tags=tags, chipType="*", paths=rootPath);
-setFullNamesTranslator(dsR, tcgaFNT01);
-
-verbose && cat(verbose, "Data set:");
-verbose && print(verbose, dsR);
-
+verbose && cat(verbose, "Selected data sets:");
+verbose && print(verbose, dataSets);
 
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Extract tumor-normal pairs
+# Select samples to process
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Extract all tumors
-dsT <- extractByTcgaType(dsR, pattern="^01");
+# Get all data sets
+dsList <- lapply(dataSets, FUN=function(dataSet) {
+  AromaUnitTotalCnBinarySet$byName(dataSet, chipType="*", paths=rootPath);
+});
 
-# Extract all normals
-dsN <- extractByTcgaType(dsR, pattern="^1[01]");
+sampleNames <- lapply(dsList, FUN=getNames);
+sampleNames <- sort(unique(unlist(sampleNames, use.names=FALSE)));
+stopifnot(length(sampleNames) > 0);
 
-# Keep only samples for which there is both a tumor and a normal
-sampleNames <- intersect(getNames(dsT), getNames(dsN));
-sampleNames <- unique(sampleNames);
-verbose && cat(verbose, "Identified tumor-normal samples:");
-verbose && print(verbose, sampleNames);
-
-# User can choose a subset of samples to process
+# User selection
 if (interactive()) {
-  sampleNames <- selectMenu(sampleNames, selected=(length(sampleNames) == 1),
-                            title="Select samples to normalize:");
+  sampleNames <- selectMenu(sampleNames, selected=(length(sampleNames) == 1));
 }
 
-dsT <- extract(dsT, sampleNames);
-dsN <- extract(dsN, sampleNames);
+# Keep only samples and data sets of interest
+dsList <- lapply(dsList, extract, sampleNames, onMissing="drop");
+ns <- sapply(dsList, length);
+dsList <- dsList[ns > 0];
+stopifnot(length(dsList) > 0);
 
-# Drop duplicated samples
-dsT <- extract(dsT, !duplicated(getNames(dsT)));
-dsN <- extract(dsN, !duplicated(getNames(dsN)));
+dataSets <- unname(sapply(dsList, FUN=getFullName));
+verbose && cat(verbose, "Data sets to be processed:");
+verbose && print(verbose, dataSets);
+stopifnot(length(dataSets) > 0);
 
-verbose && cat(verbose, "Data set of tumors:");
-verbose && print(verbose, dsT);
-verbose && cat(verbose, "Data set of normals:");
-verbose && print(verbose, dsN);
-
-# Sanity check
-stopifnot(identical(getNames(dsT), getNames(dsN)));
+verbose && cat(verbose, "Samples to be processed:");
+verbose && print(verbose, sampleNames);
+stopifnot(length(sampleNames) > 0);
 
 
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Principal curve normalization
+# Fit on log scale or not?
 # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 if (interactive()) {
   choises <- c(TRUE, FALSE);
   onLog2Scale <- textMenu(choises, title="Fit on log2 scale?", value=TRUE); 
 } else {
-  onLog2Scale <- TRUE;
+  onLog2Scale <- FALSE;
 }
-
-setFullNamesTranslator(dsT, NULL);
-setFullNamesTranslator(dsN, NULL);
-pcn <- PrincipalCurveNormalization(dsT, dsN);
-# Fit on the log2 scale?
-if (onLog2Scale) {
-  pcn$.transformFcn <- function(x) log2(x);
-  pcn$.untransformFcn <- function(y) 2^y;
-  setTags(pcn, c("*", "log2"));
-}
-verbose && print(verbose, pcn);
-
-dsTN <- process(pcn, verbose=verbose);
-
-verbose && cat(verbose, "Normalized data set:");
-verbose && print(verbose, dsTN);
-
-stop()
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-# Plots
-# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-setFullNamesTranslator(dsN, tcgaFNT01);
-setFullNamesTranslator(dsT, tcgaFNT01);
-setFullNamesTranslator(dsTN, tcgaFNT01);
-
-chr <- 7;
-ugp <- getAromaUgpFile(dsR);
-units <- getUnitsOnChromosome(ugp, chromosome=chr);
-pos <- getPositions(ugp, units=units);
-
-lim <- c(0,6);
-Alim <- c(-5,3);
-Mlim <- c(-3,3);
-
-dsList <- list(dsT, dsTN);
-
-sampleNames <- getNames(dsT);
-
-sampleName <- sampleNames[1];
-
-ds <- extract(dsN, sampleName);
-ds <- append(ds, extract(dsT, sampleName));
-ds <- append(ds, extract(dsTN, sampleName));
-theta <- extractMatrix(ds, units=units);
-colnames(theta) <- c("N", "T", "TN");
-
-ccsList <- list(
- c("N", "T"),
- c("N", "TN"),
- c("T", "TN")
-);
-
-subplots(3*length(ccsList), ncol=3, byrow=TRUE);
-par(mar=c(3,3,3,1)+0.1);
-
-for (ccs in ccsList) {
-  plot(theta[,ccs], pch=".", xlim=lim, ylim=lim);
-  abline(a=0, b=1, lwd=2, col="#999999");
-  subset <- sample(1:nrow(theta), size=nrow(theta)/8);
-  fit <- fitPrincipalCurve(theta[subset,ccs]);
-  xy <- fit$s[,2:1];
-  xy <- xy[order(xy[,1]),];
-  lines(xy, col="red", lwd=2);
   
-  plotMvsA(theta[,ccs], pch=".", Alim=Alim);
-  abline(h=0, lwd=2, col="#999999");
+
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+# Process data set by data set
+# - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+for (kk in seq(along=dsList)) {
+  ds <- dsList[[kk]];
+  verbose && enter(verbose, sprintf("Data set #%d ('%s') of %d", 
+                                 kk, getFullName(ds), length(dsList)));
+
+  setFullNamesTranslator(ds, tcgaFNT01);
   
-  cn <- RawCopyNumbers(cn=log2(theta[,ccs[2]]/theta[,ccs[1]]), x=pos);
-  plot(cn, pch=".");
-  stext(side=3, pos=1, sprintf("Chr %d", chr));
-  cnS <- binnedSmoothing(cn, by=500e3);
-  points(cnS, pch=".", cex=3, col="red");
-} # for (ccs ...)
+  verbose && cat(verbose, "Data set:");
+  verbose && print(verbose, ds);
 
 
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Extract tumor-normal pairs
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Extract all tumors
+  dsT <- extractByTcgaType(ds, pattern="^(01|20)");
+  
+  # Extract all normals
+  dsN <- extractByTcgaType(ds, pattern="^(10|11)");
+  
+  # Keep only samples for which there is both a tumor and a normal
+  sampleNames <- intersect(getNames(dsT), getNames(dsN));
+  sampleNames <- unique(sampleNames);
+  verbose && cat(verbose, "Identified tumor-normal samples:");
+  verbose && print(verbose, sampleNames);
+
+  # Nothing to do?
+  if (length(sampleNames) == 0) {
+    verbose && cat(verbose, "No paired tumor-normals. Skipping.");
+    verbose && exit(verbose);
+  }
+  
+  dsT <- extract(dsT, sampleNames);
+  dsN <- extract(dsN, sampleNames);
+  
+  # Drop duplicated samples
+  dsT <- extract(dsT, !duplicated(getNames(dsT)));
+  dsN <- extract(dsN, !duplicated(getNames(dsN)));
+  
+  verbose && cat(verbose, "Data set of tumors:");
+  verbose && print(verbose, dsT);
+  verbose && cat(verbose, "Data set of normals:");
+  verbose && print(verbose, dsN);
+  
+  # Sanity check
+  stopifnot(identical(getNames(dsT), getNames(dsN)));
+  
+  
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  # Principal curve normalization
+  # - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+  setFullNamesTranslator(dsT, NULL);
+  setFullNamesTranslator(dsN, NULL);
+  pcn <- PrincipalCurveNormalization(dsT, dsN);
+  # Fit on the log2 scale?
+  if (onLog2Scale) {
+    pcn$.transformFcn <- function(x) log2(x);
+    pcn$.untransformFcn <- function(y) 2^y;
+    setTags(pcn, c("*", "log2"));
+  }
+  verbose && print(verbose, pcn);
+  
+  dsTN <- process(pcn, verbose=verbose);
+  
+  verbose && cat(verbose, "Normalized data set:");
+  verbose && print(verbose, dsTN);
+
+  verbose && exit(verbose);
+} # for (kk ...)
 
 
 ############################################################################
 # HISTORY:
+# 2010-01-17
+# o Extended to process multiple data sets
 # 2010-01-05
 # o Updated the plot cut'n'paste code at the end.
 # o Updated script so that one can fit on the log2-scale (default).
