@@ -2,7 +2,10 @@ Package: aroma.tcga
 ===================
 
 Version: 0.4.2 [2010-01-17]
-o ...
+o Started to update code and scripts to also recognize archives
+  in the new DCC v3 format.  Still lots to add, e.g. MD5 file 
+  checksum validation of downloads etc.
+
 
 Version: 0.4.1 [2010-01-08]
 o Added extractTumorNormalPairs() for GenericDataFileSet.
